--- a/school/private_universities.html
+++ b/school/private_universities.html
@@ -170,7 +170,7 @@
 					<div class="col-md-12">
 						<div class="row">
 							<div class="col-md-3">
-								<img src="../img/world.png" height="140" class="animated bounceIn"></img>
+								<img src="../university/img/world.png" height="140" class="animated bounceIn"></img>
 
 								<br>
 								<br>
@@ -231,7 +231,7 @@
         <div class="col-md-7 clearfix animated bounceInRight">
             <div class="items info-block block-info clearfix">
                     <div class="img-thumbnail pull-left">
-                       <a href="university/ashesi_university.html"> <img src="img/ashesi_logo.png" height="90" width="90">
+                       <a href="university/ashesi_university.html"> <img src="university/img/ashesi_logo.png" height="90" width="90">
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/ashesi_university.html">Ashesi University (AUC)</a></strong></h4>
                     <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style=""> </i>  Berekeso, Eastern Region</h5>
                     <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 030-261-0330</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> admissions@ashesi.edu.gh  </font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://www.ashesi.edu.gh/" target ="_blank"> www.ashesi.edu.gh</a></font>
@@ -239,14 +239,14 @@
 
                 <div class="items info-block block-info clearfix">
                     <div class="img-thumbnail pull-left">
-                         <a href="university/central_university_college.html"> <img src="img/central.png" height="90" width="90">
+                         <a href="university/central_university_college.html"> <img src="university/img/central.png" height="90" width="90">
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/central_university_college.html">Central University College (CUC)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style=""> </i>  Miotso, Greater Accra</h5>
                     <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 030-702-0537 </font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> international@central.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://central.edu.gh/" target ="_blank"> www.central.edu.gh</a></font>
                 </div>
 
                 <div class="items info-block block-info clearfix">
                     <div class="img-thumbnail pull-left">
-                       <a href="university/catholic_university.html"> <img src="img/catholic_university.png" height="90" width="90">
+                       <a href="university/catholic_university.html"> <img src="university/img/catholic_university.png" height="90" width="90">
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/catholic_university.html">Catholic University College(CUG)</a></strong></h4>
                     <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style=""> </i>  Sunyani, Northern Region</h5>
                     <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 035-209-4657 </font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> cugadmin@cug.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://uew.edu.gh/" target ="_blank"> www.cug.edu.gh </a></font>
@@ -254,21 +254,21 @@
 
                 <div class="items info-block block-info clearfix">
                     <div class="img-thumbnail pull-left">
-                        <a href="university/christian_service_university_college.html"> <img src="img/christian_service_university_college.jpg" height="90" width="90">
+                        <a href="university/christian_service_university_college.html"> <img src="university/img/christian_service_university_college.jpg" height="90" width="90">
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/christian_service_university_college.html">Christian Service Univ. College (CSUC)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style=""> </i>  Kumasi, Ashanti Region</h5>
                     <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 032-202-8781</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> info@csuc.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://www.csuc.edu.gh/csuc/" target ="_blank"> www.csuc.edu.gh</a></font>
                 </div>
 
                 <div class="items info-block block-info clearfix">
                     <div class="img-thumbnail pull-left">
-                       <a href="university/zenith_university_college.html"> <img src="img/zuc.jpg" height="90" width="90">
+                       <a href="university/zenith_university_college.html"> <img src="university/img/zuc.jpg" height="90" width="90">
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/zenith_university_college.html">Zenith University College  (ZUC)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style=""> </i>  Kpeshie, Greater Accra</h5>
                     <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 030-278-4849</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> mails@zenithuniversitycollege.org</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://www.zenithuniversitycollege.org/site/index.php/news/home" target ="_blank"> www.zuc.edu.gh</a></font>
                 </div>         
                
                 <div class="items info-block block-info clearfix">
                     <div class="img-thumbnail pull-left">
-                       <a href="university/valley_view_university_college.html"> <img src="img/valleyview.jpg" height="90" width="90">
+                       <a href="university/valley_view_university_college.html"> <img src="university/img/valleyview.jpg" height="90" width="90">
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/valley_view_university_college.html">Valley View University College (VVU)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style=""></i>  Oyibi, Greater Accra</h5>
                     <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 030-701-1832 </font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> 
                     <a href="http://www.vvu.edu.gh/index.php/about-vvu/contact-us#.VAa3qWNPjIU" target ="_blank">contact form</a></font> | 
@@ -277,66 +277,66 @@
 
                 <div class="items info-block block-info clearfix">
                     <div class="img-thumbnail pull-left">
-                        <a href="university/presbyterian_university_college.html"> <img src="img/puc.jpg" height="90" width="90">
+                        <a href="university/presbyterian_university_college.html"> <img src="university/img/puc.jpg" height="90" width="90">
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/presbyterian_university_college.html">Presbyterian University College (PUC)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style=""></i>  Abetifi, Eastern Region</h5><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 020-227-7207</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> puc@gmail.com</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://upsa.edu.gh//" target ="_blank"> www.puc.edu.gh</a></font>
                 </div>
 
                 <div class="items info-block block-info clearfix">
                     <div class="img-thumbnail pull-left" >
-                        <a href="university/all_nations_university_college.html"><img src="img/anu.jpg" height="90" width="90"> 
+                        <a href="university/all_nations_university_college.html"><img src="university/img/anu.jpg" height="90" width="90"> 
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/all_nations_university_college.html">All Nations University College (ANUC)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style=""></i>  Koforidua, Eastern Region</h5><span>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 050-354-1863</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> anuc@gmail.com</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://gtuc.edu.gh/" target ="_blank"> www.anuc.edu.gh</a></font>
                 </div>
 
                 <div class="items info-block block-info clearfix">
                     <div class="img-thumbnail pull-left" >
-                        <a href="university/pentecost_university_college.html"><img src="img/pentecost.png" height="90" width="90"> 
+                        <a href="university/pentecost_university_college.html"><img src="university/img/pentecost.png" height="90" width="90"> 
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/pentecost_university_college.html">Pentecoast University College (PUC)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style=""></i>  Sowutuom, Greater Accra</h5>
                     <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 030-241-7057</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> puc@gmail.com</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://gtuc.edu.gh/" target ="_blank"> www.anuc.edu.gh</a></font>
                 </div>
 
                 <div class="items info-block block-info clearfix">
                     <div class="img-thumbnail pull-left" >
-                        <a href="university/regional_maritime_university.html"><img src="img/rmu.jpg" height="90" width="90"> 
+                        <a href="university/regional_maritime_university.html"><img src="university/img/rmu.jpg" height="90" width="90"> 
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/regional_maritime_university.html">Regional Maritime University (RMU)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style=""></i>  Accra, Greater Region</h5>
                     <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 0302-712-343</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> rmu@gmail.com</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://gtuc.edu.gh/" target ="_blank"> www.rmu.edu.gh</a></font>
                 </div>
 
                 <div class="items info-block block-info clearfix">
                     <div class="img-thumbnail pull-left" >
-                        <a href="university/garden_city_university_college.html"><img src="img/garden_city_university.jpg" height="90" width="90"> 
+                        <a href="university/garden_city_university_college.html"><img src="university/img/garden_city_university.jpg" height="90" width="90"> 
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/garden_city_university_college.html">Garden City University College (GCUC)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style=""></i>  Kumasi, Ashanti Region</h5>
                     <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9">  026-738-5354</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> gcuc@gmail.com</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://gtuc.edu.gh/" target ="_blank"> www.gcuc.edu.gh</a></font>
                 </div>
 
                 <div class="items info-block block-info clearfix">
                     <div class="img-thumbnail pull-left" >
-                        <a href="university/ghana_baptist_university_college.html"><img src="img/gbuc.jpg" height="90" width="90"> 
+                        <a href="university/ghana_baptist_university_college.html"><img src="university/img/gbuc.jpg" height="90" width="90"> 
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/ghana_baptist_university_college.html">Ghana Baptist University College  (GBUC)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style=""></i>  Yaa Asantewaa Rd, Ashanti Region</h5><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> N/A</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> gbuc@gmail.com</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://gtuc.edu.gh/" target ="_blank"> www.gbuc.edu.gh</a></font>
                 </div>
 
                 <div class="items info-block block-info clearfix">
                     <div class="img-thumbnail pull-left" >
-                        <a href="university/regent_university_college.html"><img src="img/regent.jpg" height="90" width="90"> 
+                        <a href="university/regent_university_college.html"><img src="university/img/regent.jpg" height="90" width="90"> 
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/regent_university_college.html">Regent University College of Science and Technology  (RUCST)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style=""></i>  Mataheko, Greater Accra</h5><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 030-266-2885</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> regent@gmail.com</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://gtuc.edu.gh/" target ="_blank"> www.regent.edu.gh</a></font>
                 </div>
 
                 <div class="items info-block block-info clearfix">
                     <div class="img-thumbnail pull-left" >
-                        <a href="university/methodist_university_college.html"><img src="img/methodist.jpg" height="90" width="90"> 
+                        <a href="university/methodist_university_college.html"><img src="university/img/methodist.jpg" height="90" width="90"> 
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/methodist_university_college.html">Methodist University College (MUC)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style=""></i>  Accra, Greater Accra</h5>
                     <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9">  0302-312-980</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> muc@gmail.com</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://gtuc.edu.gh/" target ="_blank"> www.muc.edu.gh</a></font>
                 </div>
 
                 <div class="items info-block block-info clearfix">
                     <div class="img-thumbnail pull-left" >
-                        <a href="university/islamic_university_college.html"><img src="img/iucg.jpg" height="90" width="90"> 
+                        <a href="university/islamic_university_college.html"><img src="university/img/iucg.jpg" height="90" width="90"> 
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/islamic_university_college.html">Islamic University College Ghana (IUCG)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style=""></i>  East Legon, Greater Accra</h5>
                     <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 024-471-5773</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> iucg@gmail.com</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://gtuc.edu.gh/" target ="_blank"> www.iucg.edu.gh</a></font>
                 </div>
 
                 <div class="items info-block block-info clearfix">
                     <div class="img-thumbnail pull-left" >
-                        <a href="university/wisconsin_university.html"><img src="img/wiuc.png" height="90" width="90"> 
+                        <a href="university/wisconsin_university.html"><img src="university/img/wiuc.png" height="90" width="90"> 
                     </div><h4><strong>&nbsp;&nbsp;&nbsp;<a href="university/wisconsin_university.html">Wisconsin International University College (WIUC)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style=""></i>  Agbogba Junction, Greater Accra</h5><span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 030-250-14491</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> wiucg@gmail.com</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://gtuc.edu.gh/" target ="_blank"> www.wiuc.edu.gh</a></font>
                 </div>
 				</div>
