--- a/school/private_universities.html
+++ b/school/private_universities.html
@@ -170,7 +170,7 @@
 					<div class="col-md-12">
 						<div class="row">
 							<div class="col-md-3">
-								<img src="../university/img/world.png" height="140" class="animated bounceIn"></img>
+								<img src="../img/world.png" height="140" class="animated bounceIn"></img>
 
 								<br>
 								<br>
