--- a/school/university/ghana_institute_of_management_and_public_administration.html
+++ b/school/university/ghana_institute_of_management_and_public_administration.html
@@ -64,13 +64,6 @@
 		
 		<aside class="fixed skin-6">	
 			<div class="sidebar-inner scrollable-sidebar">
-				<div class="size-toggle">
-					<a class="btn btn-sm" id="sizeToggle">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
-				</div><!-- /size-toggle -->
 				<div class="main-menu">
 					<ul>
 						<li>
@@ -283,7 +276,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-									<font color= "1a5b8f"><h4><strong>GIMPA</strong></h4> </font>
+											<font color= "1a5b8f"><h3><strong>GIMPA</strong></h3></font>
 										<p><strong>Ghana Institute of Management and Public Administration</strong></p><br>
 
 											<p>GIMPA was established in 1961 as a joint Ghana Government/United Nations Special Fund Project. It was originally called the Institute of Public Administration, established to train public servants with administrative and professional competence to plan and administer national, regional and local services.<br>
@@ -430,8 +423,8 @@
 					</a><!-- /image-wrapper -->
 				</div><!-- /gallery-item -->
 				<div class="gallery-item">
-					<a class="image-wrapper" data-lightbox="example-1" href="img/gimpa/7.jpg">
-						<img src="img/gimpa/7.jpg" alt="gallery3">
+					<a class="image-wrapper" data-lightbox="example-1" href="img/gimpa/7.JPG">
+						<img src="img/gimpa/7.JPG" alt="gallery3">
 						<div class="image-overlay">
 							<div class="image-info">
 								
@@ -484,7 +477,7 @@
 							<br>
 							
 							<h5 class="headline">
-							<p><strong>Slambooke ©2014 English</strong></p>
+							<p>Slambooke © 2014</p>
 					</div><!-- /.col -->
 				</div><!-- /.row-->
 			</div><!-- /.padding20 -->
