--- a/school/university/methodist_university_college.html
+++ b/school/university/methodist_university_college.html
@@ -48,13 +48,6 @@
 		
 		<aside class="fixed skin-6">	
 			<div class="sidebar-inner scrollable-sidebar">
-				<div class="size-toggle">
-					<a class="btn btn-sm" id="sizeToggle">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
-				</div><!-- /size-toggle -->
 				<div class="main-menu">
 					<ul>
 						<li>
@@ -266,7 +259,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-										<font color= "1a5b8f"><h4><strong>MUCG</strong></h4> </font>
+											<font color= "1a5b8f"><h3><strong>Methodist</strong></h3></font>
 										<p><strong>Methodist University College Ghana</strong></p><br>
 
 											<p>The role of the Methodist church in providing basic secondary and teacher education has further been broadened with the introduction of the Methodist University. The plans and decisions were approved at the Methodist Church's 37th Annual Conference held in Sunyani in 1998.</p><br>
@@ -332,7 +325,7 @@
 							<br>
 							
 							<h5 class="headline">
-							<p><strong>Slambooke ©2014 English</strong></p>
+							<p>Slambooke © 2014</p>
 					</div><!-- /.col -->
 				</div><!-- /.row-->
 			</div><!-- /.padding20 -->
