--- a/school/university/presbyterian_university_college.html
+++ b/school/university/presbyterian_university_college.html
@@ -1,24 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="Maxwell Sas">
-    <link rel="shortcut icon" href="img/slambooke.png">
-    
-	
-
-	<title>Presbyterian University College</title>
-	
-	<!DOCTYPE html>
-<html lang="en">
   
 <head>
     <meta charset="utf-8">
-    <title>Regent University College</title>
+    <title>Presbyterian University College</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Slambooke, Inc">
@@ -63,13 +48,6 @@
 		
 		<aside class="fixed skin-6">	
 			<div class="sidebar-inner scrollable-sidebar">
-				<div class="size-toggle">
-					<a class="btn btn-sm" id="sizeToggle">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
-				</div><!-- /size-toggle -->
 				<div class="main-menu">
 					<ul>
 						<li>
@@ -281,7 +259,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-										<font color= "1a5b8f"><h4><strong>PUC</strong></h4> </font>
+											<font color= "1a5b8f"><h3><strong>PUC</strong></h3></font>
 										<p><strong>Presbyterian University College</strong></p><br>
 
 											<p> The Presbyterian University College started admission in October 2004. The first of the three campuses of the college is located at Abetifi, Kwahu, which boasts of cool climate conditions and modern amenities including Telephone and E-mail. <br><br>It has experienced lectures backed by a library with online facilities and although it has a Non-Resident College, the Housing Bureau assists students to locate suitable accommodation in its hostel at Nkwatia and Aduamoa.
@@ -436,7 +414,7 @@
 							<br>
 							
 							<h5 class="headline">
-							<p><strong>Slambooke ©2014  English (Gh)</strong></p>
+							<p>Slambooke © 2014</p>
 					</div><!-- /.col -->
 				</div><!-- /.row-->
 			</div><!-- /.padding20 -->
