--- a/school/university/catholic_university.html
+++ b/school/university/catholic_university.html
@@ -48,13 +48,6 @@
 		
 		<aside class="fixed skin-6">	
 			<div class="sidebar-inner scrollable-sidebar">
-				<div class="size-toggle">
-					<a class="btn btn-sm" id="sizeToggle">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
-				</div><!-- /size-toggle -->
 				<div class="main-menu">
 					<ul>
 						<li>
@@ -268,7 +261,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-										<font color= "1a5b8f"><h4><strong>CUCG</strong></h4> </font>
+											<font color= "1a5b8f"><h3><strong>CUCG</strong></h3></font>
 										<p><strong>Catholic University College of Ghana</strong></p><br>
 
 											<p>The Catholic University College of Ghana is located at Fiapre, which is about 16 kilometres from Sunyani, the Brong Ahafo Regional Capital. The Catholic University is a secular institution but Catholic in character. Other special features of the Catholic University include quality education in the Catholic tradition, personalized education in a quiet environment, individualized computer usage computer usage and practise and specialized enrichment and elective courses. <br><br>Students are required to as part of their curriculum: Philosophy (with emphasis on logic and ethics) and study of Religions (emphasis on Theology) to uderscore the moral and religious formations of graduates.
@@ -282,7 +275,8 @@
 
 											<p>The Chancellor of Catholic University College is His Eminence Peter Cardinal Appiah Turkson. Professor James Hawkins Ephraim is the first Vice-Chancellor of the University. Most Rev. Matthew Kwasi Gyamfi is the Episcopal Chairman of the Catholic University College. Professor Michael Schultheis became the President of CUCG (2003-2007). Prof. Ebow Mensah acted as the President of CUCG in 2007 when Prof. Schultheis exited.
 
-Rev. Msgr. Albert Kuuire was the first Registrar (2002-2006), Mr. Ernest Kweku Appiah Odoom became the second registrar (2007-Aug. 2012) and Mr. Frank K. Yeboah (Oct. 2012-Aug.2013). Mr. Agana Banga was the first Finance Officer and was succeeded by the current Finance Officer, Mr. Justice R. A. Ayam. The Out-gone Chairman of Board of Trustees (BOT) was Most Rev. Joseph Osei Bonsu while the Vice-Chairman was Dr. K. Donkor Fordjour.</p><br>
+											Rev. Msgr. Albert Kuuire was the first Registrar (2002-2006), Mr. Ernest Kweku Appiah Odoom became the second registrar (2007-Aug. 2012) and Mr. Frank K. Yeboah (Oct. 2012-Aug.2013). Mr. Agana Banga was the first Finance Officer and was succeeded by the current Finance Officer, Mr. Justice R. A. Ayam. The Out-gone Chairman of Board of Trustees (BOT) was Most Rev. Joseph Osei Bonsu while the Vice-Chairman was Dr. K. Donkor Fordjour.</p><br>
+
 											<p>The following members constituted the old Board of Trustees of the University College: Archbishop (Emeritus) Akwasi Sarpong, Bishop Joseph Kweku Essien, Bishop Francis Lodonu and Bishop Paul Bemile. The rest are: Prof. Ebow Mensah, Prof. Alexander A. Kwapong, Prof. Kofi Kumado, Mr. Paul Kumahor, Sir Fosuaba A. Banahene, Rev. Fr. Gervase Angsotinege, Rev. Sr. Regina Kampo and Mrs. Cecilia Koufie. Mr. Ernest Kweku Appiah Odoom was the Secretary to the BOT.</p>
 
 											<p>Currently, the following personalities form the new Board of Trustees (BOT) with Most Rev. Philip Naameh as the Chairman.  The Vice-Chairman is Mrs. Juliana Amonoo-Neizer.  The rest of the members include: Most Rev. Matthew Kwasi Gyamfi, Dr. Yaw Nsiah Peprah, Sir Dr. Kwame Donkor Fordwor, Msgr. Dr. John Opoku Agyemang, Prof. James Hawkins Ephraim, Rev. Sr. Elizabeth Amoako-Arhen, Sir Dave Anane Druyey and Mad. Nancy Florence Amapong Yelpoe. The Ag. Registrar is by default is the Secretary in Attendance to the BOT.</p>
@@ -561,7 +555,7 @@ Rev. Msgr. Albert Kuuire was the first Registrar (2002-2006), Mr. Ernest Kweku A
 							<br>
 							
 							<h5 class="headline">
-							<p><strong>Slambooke ©2014 English</strong></p>
+							<p>Slambooke © 2014</p>
 					</div><!-- /.col -->
 				</div><!-- /.row-->
 			</div><!-- /.padding20 -->
