--- a/school/university/islamic_university_college.html
+++ b/school/university/islamic_university_college.html
@@ -1,25 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="Maxwell Sas">
-    <link rel="shortcut icon" href="img/slambooke.png">
-    
-	
-
-	<title>Islamic University College</title>
-	
-	
-    <!DOCTYPE html>
-<html lang="en">
   
 <head>
     <meta charset="utf-8">
-    <title>Regent University College</title>
+    <title>Islamic University College</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Slambooke, Inc">
@@ -64,13 +48,6 @@
 		
 		<aside class="fixed skin-6">	
 			<div class="sidebar-inner scrollable-sidebar">
-				<div class="size-toggle">
-					<a class="btn btn-sm" id="sizeToggle">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
-				</div><!-- /size-toggle -->
 				<div class="main-menu">
 					<ul>
 						<li>
@@ -281,7 +258,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-										<font color= "1a5b8f"><h4><strong>IUCG</strong></h4> </font>
+											<font color= "1a5b8f"><h3><strong>IUCG</strong></h3></font>
 										<p><strong>Islamic University College Ghana</strong></p><br>
 
 											<p>The establishment of the Islamic University College, Ghana started with the acquisition of land in 1998, The first batch of students to be admitted to the college started lectures on 10th April, 2001. That date, therefore marked real beginnings of operations of the college. The college was established entirely with support from the World Ahul Bait Foundation an Iranian Non-Governmental Agency. It is a private non-residential secular institution with accreditation from the National Accreditation Board.</p><br>
@@ -332,7 +309,7 @@
 							<br>
 							
 							<h5 class="headline">
-							<p><strong>Slambooke ©2014  English (Gh)</strong></p>
+							<p>Slambooke © 2014</p>
 					</div><!-- /.col -->
 				</div><!-- /.row-->
 			</div><!-- /.padding20 -->
