--- a/school/university/ghana_baptist_university_college.html
+++ b/school/university/ghana_baptist_university_college.html
@@ -1,24 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="Maxwell Sas">
-    <link rel="shortcut icon" href="img/slambooke.png">
-    
-	
-
-	<title>Ghana Baptist University College</title>
-	
-	<!DOCTYPE html>
-<html lang="en">
   
 <head>
     <meta charset="utf-8">
-    <title>Regent University College</title>
+    <title>Ghana Baptist University College</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Slambooke, Inc">
@@ -63,13 +48,6 @@
 		
 		<aside class="fixed skin-6">	
 			<div class="sidebar-inner scrollable-sidebar">
-				<div class="size-toggle">
-					<a class="btn btn-sm" id="sizeToggle">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
-				</div><!-- /size-toggle -->
 				<div class="main-menu">
 					<ul>
 						<li>
@@ -364,7 +342,7 @@
 							<br>
 							
 							<h5 class="headline">
-							<p><strong>Slambooke ©2014 English</strong></p>
+							<p>Slambooke © 2014</p>
 					</div><!-- /.col -->
 				</div><!-- /.row-->
 			</div><!-- /.padding20 -->
