--- a/school/university/garden_city_university_college.html
+++ b/school/university/garden_city_university_college.html
@@ -1,24 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="Maxwell Sas">
-    <link rel="shortcut icon" href="img/slambooke.png">
-    
-	
-
-	<title>Garden City University College</title>
-	
-    <!DOCTYPE html>
-<html lang="en">
   
 <head>
     <meta charset="utf-8">
-    <title>Regent University College</title>
+    <title>Garden City University College</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Slambooke, Inc">
@@ -63,13 +48,6 @@
 		
 		<aside class="fixed skin-6">	
 			<div class="sidebar-inner scrollable-sidebar">
-				<div class="size-toggle">
-					<a class="btn btn-sm" id="sizeToggle">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
-				</div><!-- /size-toggle -->
 				<div class="main-menu">
 					<ul>
 						<li>
@@ -280,7 +258,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-										<font color= "1a5b8f"><h4><strong>GCUC</strong></h4> </font>
+											<font color= "1a5b8f"><h3><strong>GCUC</strong></h3></font>
 										<p><strong>Garden City University College</strong></p><br>
 
 											<p>The Garden City University College was established as the College of Information Technology and Management Systems (CITMAS) in 2001 and was after due accreditation, granted permission to operate as a University College in January 2004<br><br>
@@ -554,7 +532,7 @@
 							<br>
 							
 							<h5 class="headline">
-							<p><strong>Slambooke ©2014  English (Gh)</strong></p>
+							<p>Slambooke © 2014</p>
 					</div><!-- /.col -->
 				</div><!-- /.row-->
 			</div><!-- /.padding20 -->
