--- a/school/university/university_of_health_and_allied_sciences.html
+++ b/school/university/university_of_health_and_allied_sciences.html
@@ -48,13 +48,6 @@
 		
 		<aside class="fixed skin-6">	
 			<div class="sidebar-inner scrollable-sidebar">
-				<div class="size-toggle">
-					<a class="btn btn-sm" id="sizeToggle">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
-				</div><!-- /size-toggle -->
 				<div class="main-menu">
 					<ul>
 						<li>
@@ -266,7 +259,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-										<font color= "1a5b8f"><h4><strong>UHAS</strong></h4> </font>
+											<font color= "1a5b8f"><h3><strong>UHAS</strong></h3></font>
 										<p><strong>University of Health and Allied Sciences</strong></p><br>
 
 											<p>The University of Health and Allied Sciences was established by an Act of Parliament(Act 828), which received the presidential approval in December 2011. It is uniquely devoted to teaching, research and service in the Health Sciences. Community health service and problem solving techniques form a core part of the curriculum. The University was formed with an Interim University Council that governs the affairs of the school chaired by Prof. Kofi Anyidoho, MA(Bloomington), PhD(Austin).<br>
@@ -535,7 +528,7 @@
 							<br>
 							
 							<h5 class="headline">
-							<p><strong>Slambooke ©2014  English (Gh)</strong></p>
+							<p>Slambooke © 2014</p>
 					</div><!-- /.col -->
 				</div><!-- /.row-->
 			</div><!-- /.padding20 -->
