--- a/school/university/national_film_and_television_institute.html
+++ b/school/university/national_film_and_television_institute.html
@@ -1,24 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="Maxwell Sas">
-    <link rel="shortcut icon" href="img/slambooke.png">
-    
-	
-
-	<title>National Film and Television Institute</title>
-	
-	<!DOCTYPE html>
-<html lang="en">
   
 <head>
     <meta charset="utf-8">
-    <title>Regent University College</title>
+    <title>National Film and Television Institute</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Slambooke, Inc">
@@ -281,7 +266,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-									<font color= "1a5b8f"><h4><strong>NAFTI</strong></h4> </font>
+											<font color= "1a5b8f"><h3><strong>NAFTI</strong></h3></font>
 										<p><strong>National Film and Television Institute</strong></p><br>
 
 											<p>The National Film and Television Institute (NAFTI) was established in 1978 by the Government of Ghana as a public Institution of Higher Education in Film and Television Production. NAFTI has a campus spread over three studios all within walking distance in a quiet residential vicinity of Accra. Since its inception in 1978, NAFTI has fostered professional and academic excellence in film and television education. The Institute has maintained this high level of performance over the years and consequently has drawn students from many parts of sub-Saharan Africa including Benin , Burkina Faso , Burundi , Cameroon , Ethiopia , Gambia , Ghana , Mali , Nigeria , South Africa , Swaziland , Uganda , Tanzania , Zambia and Zimbabwe . Thus, NAFTI’s graduates have been influential in shaping the film and television industry in Ghana and in Africa.<br><br>
@@ -659,7 +644,7 @@
 							<br>
 							
 							<h5 class="headline">
-							<p><strong>Slambooke ©2014  English (Gh)</strong></p>
+							<p>Slambooke © 2014</p>
 					</div><!-- /.col -->
 				</div><!-- /.row-->
 			</div><!-- /.padding20 -->
