--- a/school/public_senior_high/adisadel_boys.html
+++ b/school/public_senior_high/adisadel_boys.html
@@ -48,13 +48,6 @@
 		
 		<aside class="fixed skin-6">	
 			<div class="sidebar-inner scrollable-sidebar">
-				<div class="size-toggle">
-					<a class="btn btn-sm" id="sizeToggle">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
-				</div><!-- /size-toggle -->
 				<div class="main-menu">
 					<ul>
 						<li>
@@ -267,7 +260,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-										<font color= "1a5b8f"><h4><strong>Adisco</strong></h4> </font>
+											<font color= "1a5b8f"><h3><strong>Adisco</strong></h3></font>
 										<p><strong>Adisadel College</strong></p><br>
 
 											<p>A 3-year boarding secondary school for boys (14-18years), Adisadel was founded on January 4th, 1910 by the Society for the Propagation of the Gospel (S.P.G.). The school was then named SPG Grammar School. In 1924 the name was changed to St Nicholas Grammar School. When the school was relocated to its present location in early 1936 from downtown Cape Coast, it assumed its current name-Adisadel College. <br><br>
@@ -585,7 +578,7 @@
 							<br>
 							
 							<h5 class="headline">
-							<p><strong>Slambooke ©2014  English</strong></p>
+							<p>Slambooke © 2014</p>
 					</div><!-- /.col -->
 				</div><!-- /.row-->
 			</div><!-- /.padding20 -->
